--- a/jackett/sass/darkerr.scss
+++ b/jackett/sass/darkerr.scss
@@ -1,4 +1,4 @@
-/*  Darkerr for Jackett 1.0.0-beta3 by Felix
+/*  Darkerr for Jackett 1.0.0-beta4 by Felix
 
         A darker theme for Jackett
 
@@ -14,3 +14,5 @@
 @import "partials/_table.scss";
 @import "partials/_input.scss";
 @import "partials/_modals.scss";
+@import "partials/_buttons.scss";
+@import "partials/_info.scss";
