--- a/jackett/darkerr.css
+++ b/jackett/darkerr.css
@@ -1,4 +1,4 @@
-/*  Darkerr for Jackett 1.0.0-beta3 by Felix
+/*  Darkerr for Jackett 1.0.0-beta4 by Felix
 
         A darker theme for Jackett
 
@@ -9,7 +9,7 @@
 /* --- VERSION --- */
 #footer:after {
   white-space: pre !important;
-  content: "\A Darkerr for Jackett Version 1.0.0-beta3" !important;
+  content: "\A Darkerr for Jackett Version 1.0.0-beta4" !important;
 }
 
 /* --- BACKGROUNDS --- */
@@ -79,25 +79,71 @@ table tfoot td {
           box-shadow: none !important;
 }
 
-#configured-indexer-datatable_length select {
+#configured-indexer-datatable_length select,
+#unconfigured-indexer-datatable_length select,
+#jackett-search-results-datatable_length select,
+#jackett-releases-datatable_length select {
   background-color: #303030 !important;
   border: solid 1px #303030 !important;
 }
 
-#configured-indexer-datatable_length select:focus {
+#configured-indexer-datatable_length select:focus,
+#unconfigured-indexer-datatable_length select:focus,
+#jackett-search-results-datatable_length select:focus,
+#jackett-releases-datatable_length select:focus {
   border-color: #FFF !important;
 }
 
-#configured-indexer-datatable_filter input {
+#configured-indexer-datatable_filter input,
+#unconfigured-indexer-datatable_filter input,
+#jackett-search-results-datatable_filter input,
+#jackett-releases-datatable_filter input {
   background-color: #303030 !important;
   border: solid 1px #303030 !important;
 }
 
-#configured-indexer-datatable_filter input:focus {
+#configured-indexer-datatable_filter input:focus,
+#unconfigured-indexer-datatable_filter input:focus,
+#jackett-search-results-datatable_filter input:focus,
+#jackett-releases-datatable_filter input:focus {
+  border-color: #FFF !important;
+}
+
+#searchquery {
+  background-color: #303030 !important;
+  border: solid 1px #303030 !important;
+}
+
+#searchquery:focus {
   border-color: #FFF !important;
 }
 
 /* --- MODALS --- */
 .modal-content {
   background-color: #1F1F1F !important;
+}
+
+/* --- BUTTONS --- */
+.btn-default {
+  background-color: #303030 !important;
+  border-color: #303030 !important;
+}
+
+.btn-default:hover {
+  background-color: #2b2b2b !important;
+  border-color: #2b2b2b !important;
+}
+
+.close {
+  opacity: .8 !important;
+}
+
+.close:hover {
+  opacity: .4 !important;
+}
+
+/* --- INFO --- */
+.alert-info {
+  background-color: #303030 !important;
+  border-color: #303030 !important;
 }
